chore: fixes circular dependency that make the build fail since new features in Spring
* removes unused `locationRPC` field and dependency that causes a circular dependency
* The bean method `getSearchSession` is no longer used directly in the config itself, as this caused a circular dependency.
* uses new methods from Java 17